Change history
--------------

Release Candidate 3
===================

- New overload to PaginationHelper.CreatePageLink(), accepting a NameValueCollection.
  Now you can supply "$request.queryString" itself as a parameter to CreatePageLink.

- Enhanced AbstractHelper.BuildQueryString to support multi-value query strings:
  IDictionary dict = new Hashtable();
  dict.Add("id", 5);
  dict.Add("selectedItem", new int[] { 2, 4, 99 });
  string queryString = BuildQueryString(dict);
  // should result in: "id=5&amp;selectedItem=2&amp;selectedItem=4&amp;selectedItem=99&amp;"

- FormHelper.Select() - applied patch from James Sapara allowing firstoptionvalue to be set to 
  something other than null. 

- Restored property IsPostback checking (For use with WebFormViewEngine).

- Restored support for passing additional arguments to a controller
  via Send and use a dictionary to supply that information.

- Applied patch by Andrew Peters fixing MR-182
  "Adds FormTo and LinkToWithPost methods to HtmlHelper"

- Fixed MR-180
  "Url Tokenizer Bug at Turkish Culture Info"

- Properly quote file/directory arguments in Pre/Post Build Events to accomodate
  names with spaces.
  Also added some missing files to TestSiteWindsor-vs2005 Project

- Removed DetermineIfPostBack due to side effects when using a custom upload approach
  Also removed PreRequestHandler setting the session as it wasn't really necessary using
  this event for that. Moved to the handler.

- Included abstract Filter class, just as a helper to implement filters 
  with a better interface (instead of IFilter.Process)

- Fixed MR-165 "DataBind doesn't bind NullableDateTime"

- Fixed MR-169
  "Scarfold record modification results exception Can't edit without 
  the proper id when validation is failed in the defined validation rule"

- Fixed MR-168 
  "ValidateEmail attribute does not work properly in Monorail Scarfold"

- Introduced CacheAttribute which can be used on actions to configure 